deploy/base/monitor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor
  labels:
    app.kubernetes.io/name: monitor
    app.kubernetes.io/component: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: monitor
  template:
    metadata:
      labels:
        app.kubernetes.io/name: monitor
        app.kubernetes.io/component: monitor
    spec:
      securityContext:
        hostUsers: false
      containers:
        - name: monitor
          image: gen-ai-k8s-playground-monitor:local
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5100
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
