deploy/base/monitor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitor
  labels:
    app.kubernetes.io/name: monitor
spec:
  selector:
    app.kubernetes.io/name: monitor
  ports:
    - name: http
      port: 5100
      targetPort: http
